# compute-runtime

./: .clang-format  .clang-tidy  .config  .ctags  .gitattributes  .gitignore  .gitreview  .travis.yml  ARCHITECTURE.md  BUILD.md  BUILD_Centos.md  BUILD_LOCAL.md  CMakeLists.txt  CONTRIBUTING.md  DISTRIBUTIONS.md  FAQ.md  GUIDELINES.md  ISSUE_SUBMISSION_GUIDE.md  Jenkinsfile  LEGACY_PLATFORMS.md  LEO.md  LICENSE.md  README.md  WSL.md  build_local.sh  common_macros.cmake  compiler.config.h.in  config.h.in  driver_version.h.in  hw_cmds_default.h.in  igc.opencl.h.in  lib_names.h.in  os_release_info.cmake  package.cmake  package_config.cmake  platforms.cmake  readme.md  shippable.yml  test_files_setup.h.in  ubsan.supp  (+1 more)
core/: CMakeLists.txt  enable_gens.cmake
core/built_ins/: sip_kernel_type.h
core/command_container/: CMakeLists.txt  cmdcontainer.cpp  cmdcontainer.h  command_encoder.h  command_encoder.inl  command_encoder_base.inl
core/command_stream/: CMakeLists.txt  command_stream_receiver.cpp  command_stream_receiver.h  command_stream_receiver_hw.h  command_stream_receiver_hw_base.inl  command_stream_receiver_hw_bdw_plus.inl  command_stream_receiver_hw_tgllp_plus.inl  csr_definitions.h  csr_deps.cpp  csr_deps.h  experimental_command_buffer.cpp  experimental_command_buffer.inl  linear_stream.cpp  linear_stream.h  preemption.cpp  preemption.h  preemption.inl  preemption_mode.h  scratch_space_controller.cpp  scratch_space_controller.h  scratch_space_controller_base.cpp  scratch_space_controller_base.h  submissions_aggregator.cpp  submissions_aggregator.h
core/commands/: CMakeLists.txt  bxml_generator_glue.h
core/compiler_interface/: CMakeLists.txt  compiler_cache.cpp  compiler_cache.h  compiler_interface.cpp  compiler_interface.h  compiler_interface.inl  create_main.cpp  default_cache_config.h  intermediate_representations.h  linker.cpp  linker.h
core/debug_settings/: CMakeLists.txt  debug_settings_manager.cpp  debug_settings_manager.h  debug_variables_base.inl
core/device/: device.cpp  device.h  device_get_engine.cpp  root_device.cpp  root_device.h  sub_device.cpp  sub_device.h
core/device_binary_format/: CMakeLists.txt  device_binary_format_ar.cpp  device_binary_format_ocl_elf.cpp  device_binary_format_patchtokens.cpp  device_binary_formats.cpp  device_binary_formats.h  patchtokens_decoder.cpp  patchtokens_decoder.h  patchtokens_dumper.cpp  patchtokens_validator.cpp  patchtokens_validator.h  patchtokens_validator.inl
core/direct_submission/: direct_submission_hw.h  direct_submission_hw.inl
core/elf/: reader.cpp  reader.h  types.h  writer.h
core/execution_environment/: CMakeLists.txt  execution_environment.cpp  execution_environment.h  root_device_environment.cpp  root_device_environment.h
core/gen11/: command_encoder_gen11.cpp  enable_family_full_core_gen11.cpp  enable_gen11.cpp  enable_hw_info_config_gen11.cpp  hw_cmds.h  hw_cmds_base.h  hw_cmds_ehl.h  hw_cmds_generated.inl  hw_cmds_icllp.h  hw_cmds_lkf.h  hw_info_ehl.h  hw_info_gen11.h  hw_info_icllp.h  hw_info_lkf.h  image_core_gen11.cpp  image_gen11.cpp  preamble_gen11.cpp  preemption_gen11.cpp
core/gen12lp/: command_encoder_gen12lp.cpp  enable_family_full_core_gen12lp.cpp  enable_gen12lp.cpp  enable_hw_info_config_gen12lp.cpp  hw_cmds.h  hw_cmds_base.h  hw_cmds_generated.inl  hw_cmds_generated_patched.inl  hw_cmds_tgllp.h  hw_info.h  hw_info_gen12lp.h  hw_info_tgllp.h  image_gen12lp.cpp  preamble_gen12lp.cpp  preemption_gen12lp.cpp
core/gen8/: command_encoder_gen8.cpp  enable_family_full_core_gen8.cpp  enable_gen8.cpp  enable_hw_info_config_gen8.cpp  hw_cmds.h  hw_cmds_base.h  hw_cmds_bdw.h  hw_cmds_generated.inl  hw_info.h  hw_info_bdw.h  hw_info_gen8.h  image_core_gen8.cpp  image_gen8.cpp  preamble_gen8.cpp  preemption_gen8.cpp
core/gen9/: command_encoder_gen9.cpp  enable_family_full_core_gen9.cpp  enable_gen9.cpp  enable_hw_info_config_gen9.cpp  hw_cmds.h  hw_cmds_base.h  hw_cmds_bxt.h  hw_cmds_cfl.h  hw_cmds_generated.inl  hw_cmds_glk.h  hw_cmds_kbl.h  hw_cmds_skl.h  hw_info.h  hw_info_bxt.h  hw_info_cfl.h  hw_info_gen9.h  hw_info_glk.h  hw_info_kbl.h  hw_info_skl.h  image_core_gen9.cpp  image_gen9.cpp  preamble_gen9.cpp  preemption_gen9.cpp
core/gmm_helper/: CMakeLists.txt  gmm.cpp  gmm.h  gmm_helper.cpp  gmm_helper.h  gmm_interface.h  gmm_lib.h  gmm_types_converter.cpp  gmm_utils.cpp  page_table_mngr.cpp  page_table_mngr.h  page_table_mngr_impl.cpp  resource_info.cpp  resource_info.h  resource_info_impl.cpp
core/helpers/: CMakeLists.txt  abort.cpp  abort.h  address_patch.h  aligned_memory.h  allow_deferred_deleter.cpp  array_count.h  aux_translation.h  basic_math.h  blit_commands_helper.cpp  blit_commands_helper.h  blit_commands_helper_base.inl  blit_commands_helper_bdw_plus.inl  cache_policy.cpp  cache_policy.h  common_types.h  completion_stamp.cpp  completion_stamp.h  debug_helpers.cpp  debug_helpers.h  deferred_deleter_helper.h  dirty_state_helpers.cpp  engine_node_helper.cpp  file_io.h  (+46 more)
elf/: CMakeLists.txt  reader.cpp  reader.h  types.h  writer.cpp  writer.h
level_zero/: .config  CMakeLists.txt  os_release_info.cmake  ze_intel_gpu_lib_pch.h  ze_intel_gpu_version.h.in
offline_compiler/: CMakeLists.txt  create_command_stream.cpp  extra_settings.cpp  helper.cpp  main.cpp  multi_command.cpp  multi_command.h  ocloc_api.h  ocloc_arg_helper.h  ocloc_fatbinary.cpp  ocloc_fatbinary.h  ocloc_wrapper.cpp  offline_compiler.cpp  offline_compiler.h  offline_compiler_helper.cpp  offline_compiler_options.cpp  options.cpp
opencl/: CMakeLists.txt  igdrcl_lib_pch.h
runtime/: CMakeLists.txt  core_files.cmake  enable_gens.cmake
shared/: CMakeLists.txt
unit_tests/: .clang-tidy  CMakeLists.txt  abort.cpp  base_object_allocator.cpp  core_unit_tests_files.cmake  custom_event_listener.h  global_environment.cpp  global_environment.h  igdrcl_tests_pch.cpp  igdrcl_tests_pch.h  main.cpp  main_linux.cpp  memory_leak_listener.cpp  memory_leak_listener.h  options.cpp  options_unit_tests.cpp  test_mode.h  tests_configuration.h  ult_config_listener.cpp  ult_config_listener.h  ult_configuration.cpp  verify.bat
(+15499 files in other folders)
